# VELA

./: .dockerignore  .gitignore  Dockerfile  EPHEMERAL_WEB_ACCESS_DESIGN.md  INSTRUCTION_DESKTOP_DESIGN.md  README.md  SPEC.md  android-app-plan-vela-native-android-with-offline-first-vault-and-full-desktop-parity.md  docker-entrypoint.sh  nixpacks.toml
.claude/: settings.local.json
.github/scripts/: ipc_ping.py
.github/workflows/: build-server.yml  desktop-macos.yml  ios-app.yml  ios-core.yml  release-android.yml  release-desktop.yml  verify-android.yml  verify-server.yml
.opencode/: package-lock.json
.opencode/agents/: verifier.md  writer.md
androidVELA/: .gitignore  settings.gradle.kts
androidVELA/app/: build.gradle.kts
desktopVELA/: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
desktopVELA/src/: App.tsx  index.css  main.tsx  themes.ts
desktopVELA/src-tauri/: Cargo.toml  tauri.conf.json
desktopVELA/src-tauri/assets/: com.vela.vault.desktop
desktopVELA/src-tauri/capabilities/: default.json
desktopVELA/src-tauri/icons/: README.md  icon.json
desktopVELA/src-tauri/src/: api.rs  biometric.rs  crypto.rs  device.rs  ipc.rs  lib.rs  main.rs  rclone.rs  session.rs  store.rs  token.rs  vault.rs  vault_lifecycle_test.rs  wayland_shortcut.rs
desktopVELA/src-tauri/src/commands/: audit.rs  biometric.rs  devices.rs  ipc.rs  mod.rs  recovery.rs  session.rs  settings.rs  sharing.rs  sync.rs  totp.rs  vault.rs  web_session.rs  window.rs
desktopVELA/src/components/: AddItemModal.tsx  ConfirmResetModal.tsx  ConflictResolution.tsx  FaviconIcon.tsx  PasswordGenerator.tsx  QuickSearchOverlay.tsx  RecoverAccountModal.tsx  RecoverySettings.tsx  SessionExpiredOverlay.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx  TrustedContactRecovery.tsx  WebAccessModal.tsx
desktopVELA/src/context/: AppContext.tsx
desktopVELA/src/hooks/: useClipboard.ts
desktopVELA/src/lib/: webauthn.ts
desktopVELA/src/views/: AuditLogScreen.tsx  BiometricGate.tsx  BreachMonitorScreen.tsx  DevicesScreen.tsx  (+7 more)
extension/: .gitignore  README.md  build.js  bump-version.js  manifest.json  package.json
extension/manifests/: chrome.json  firefox.json
extension/native-messaging/: README.md  register-firefox-host.bat  register-firefox-host.sh  register-host.bat  register-host.sh  vela-native-messaging-host-win.rs  vela-native-messaging-host.py
iosVELA/: project.yml
iosVELA/AutoFill/: CredentialListView.swift  CredentialProviderViewController.swift
iosVELA/Shared/: AccountStore.swift  AppGroup.swift  AuditLog.swift  AutofillMatch.swift  BreachService.swift  CloudRecoveryBackup.swift  EnrollmentCode.swift  FaviconImage.swift  FaviconService.swift  ItemFilter.swift  PasswordGenerator.swift  PasswordRMSStore.swift  RMSStore.swift  ShareManifest.swift  SyncEngine.swift  TOTPGenerator.swift  Vault.swift  VaultMerge.swift  VaultRepository.swift  VelaClient.swift  VelaCoreFFI.swift  WebAuthnCeremony.swift
iosVELA/Sources/: AccountView.swift  AccountViewModel.swift  AddEditItemView.swift  AddItemView.swift  AuditLogView.swift  BreachMonitorView.swift  BreachViewModel.swift  ContentView.swift  DevicesView.swift  DevicesViewModel.swift  EnrollView.swift  ItemDetailView.swift  RMSStore.swift  RecoverAccountView.swift  SettingsView.swift  SharingView.swift  SharingViewModel.swift  UnlockView.swift  VELAApp.swift  Vault.swift  VaultListView.swift  VaultRepository.swift  VaultViewModel.swift  VelaCoreFFI.swift  WebAccessView.swift  WelcomeView.swift
iosVELA/Tests/: AutofillMatchTests.swift  Phase4Tests.swift  Phase5Tests.swift  Phase6Tests.swift  Phase7Tests.swift  Phase7bTests.swift  Phase8Tests.swift  VaultRepositoryTests.swift
iosVELA/UITests/: VELAUITests.swift
libVELA/cyclo/: .gitignore  CHANGELOG.md  README.md  autoresearch.md  autoresearch.sh  build.zig  build.zig.zon  cyclo.md
libVELA/vela-android-bridge/: Cargo.toml
libVELA/vela-android-bridge/src/: lib.rs
libVELA/vela-apple-bridge/: Cargo.toml  build-xcframework.sh
libVELA/vela-apple-bridge/include/: module.modulemap  vela_apple.h
libVELA/vela-apple-bridge/smoke/: smoke.swift
libVELA/vela-apple-bridge/src/: lib.rs
libVELA/vela-core/: Cargo.toml
libVELA/vela-core/src/: lib.rs  password.rs  vault.rs
libVELA/vela-crypto/: Cargo.toml  SECURITY.md  build.rs
libVELA/vela-crypto/src/: aead.rs  cyclo.rs  error.rs  kdf.rs  kem.rs  lib.rs  oram.rs  password_kdf.rs  shamir.rs  signing.rs  verification.rs
libVELA/vela-wasm-bridge/: Cargo.toml  README.md
libVELA/vela-wasm-bridge/.cargo/: config.toml
libVELA/vela-wasm-bridge/src/: lib.rs
outputs/: vela-desktop-audit.md  vela-protocol-research.md  vela-protocol-review.md
outputs/.plans/: vela-desktop-audit.md
serverVELA/: .env.example  .gitignore  Cargo.toml  DEPLOY_SYSTEMD.md  generate_paseto.zig
serverVELA/vela-server/: Cargo.toml
serverVELA/vela-server/migrations/: 20260323000001_initial.sql  20260323000002_recovery_share.sql  20260323000003_recovery_auth_hash.sql  20260323000004_oram_buckets_and_webauthn.sql  20260323000005_webauthn_cred_id_index.sql
serverVELA/vela-server/src/: config.rs  data_lock.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  migration.rs  net.rs  rate_limit.rs  routes.rs  state.rs  store.rs
serverVELA/vela-server/src/account/: delete.rs  mod.rs
serverVELA/vela-server/src/auth/: challenge.rs  logout.rs  mod.rs  token.rs  verify.rs
serverVELA/vela-server/src/device/: capsule.rs  enroll.rs  invitation.rs  list.rs  mod.rs  revoke.rs
serverVELA/vela-server/src/recovery/: enroll_device.rs  initiate.rs  mod.rs  recover.rs  webauthn.rs
serverVELA/vela-server/src/share/: mod.rs
serverVELA/vela-server/src/transport/: http3.rs  mod.rs  tcp_tls.rs  tls.rs
serverVELA/vela-server/src/vault/: chunk.rs  mod.rs  oram.rs  sync.rs
serverVELA/vela-server/src/web_session/: mod.rs
serverVELA/vela-server/tests/: integration.rs
serverVELA/vela-server/tests/helpers/: mod.rs
webVELA/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
webVELA/src/: api.ts  main.ts  styles.css  vela.ts
(+138 files in other folders)
