[package]
name = "vela-android-bridge"
version = "0.1.0"
edition = "2021"
description = "Android native bridge for VELA shared Rust core"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64 = "0.22"
getrandom = "0.2"
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vela-core = { path = "../vela-core" }
vela-crypto = { path = "../vela-crypto", default-features = false }

[dev-dependencies]
