[package]
name = "vela-core"
version = "0.1.0"
edition = "2021"
description = "Shared VELA client core for desktop and Android"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.2"
psl = "2.1.213"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
