[package]
name = "vela-server"
version = "0.1.0"
edition = "2021"
description = "VELA Protocol v2.0 – API server (Axum/Stoolap/sled)"

[[bin]]
name = "vela-server"
path = "src/main.rs"

[lib]
name = "vela_server"
path = "src/lib.rs"

[dependencies]
# ── Crypto library ─────────────────────────────────────────────────────────────
vela-crypto = { path = "../../libVELA/vela-crypto" }

# ── Web framework ──────────────────────────────────────────────────────────────
axum              = { version = "0.7", features = ["macros", "multipart"] }
tokio             = { version = "1",   features = ["full"] }
tower             = { version = "0.4", features = ["util"] }
tower-http        = { version = "0.5", features = ["trace", "cors", "limit"] }
bytes             = "1"
http-body-util    = "0.1"
hyper             = { version = "1", features = ["server", "http1", "http2"] }
hyper-util        = { version = "0.1", features = ["server", "tokio", "http1", "http2", "service"] }
rustls            = "0.23"
rustls-pemfile    = "2"
tokio-rustls      = "0.26"
quinn             = "0.11"
h3                = "0.0.8"
h3-quinn          = "0.0.10"

# ── Embedded SQL database ──────────────────────────────────────────────────────
stoolap = "0.4"

# ── Embedded KV store ─────────────────────────────────────────────────────────
sled = "0.34"

# ── PASETO v4 public tokens ────────────────────────────────────────────────────
pasetors = { version = "0.6", default-features = false, features = ["v4", "paserk", "std"] }

# ── Serialization ──────────────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
url         = "2"
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }

# ── UUID ───────────────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }

# ── Time ───────────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── Encoding ───────────────────────────────────────────────────────────────────
base64 = "0.22"
hex    = "0.4"

# ── Randomness ─────────────────────────────────────────────────────────────────
rand = "0.8"
blake3 = "1"

# ── Error handling ─────────────────────────────────────────────────────────────
thiserror = "1"
anyhow    = "1"

# ── Configuration ──────────────────────────────────────────────────────────────
dotenvy = "0.15"

# ── Observability ──────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha2 = "0.11.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
